<resources>
    <string name="app_name">In My Words</string>
    <string name="sign_out">Sign Out</string>
    <string name="style">Style</string>
    <string name="account">Account</string>
    <string name="viewAllWords">All Words</string>
    <string name="account_picture">Account Picture</string>
    <string name="delete_account">Delete Account</string>
    <string name="search">Search</string>
    <string name="add">Add New Word</string>
    <string name="favourites">Favourites</string>
    <string name="record">Record</string>
    <string name="recording">Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="suggestion">Suggestion</string>
    <string name="playBack">Play Back</string>
    <string name="next">Next</string>
    <string name="favourite">Favourite</string>
    <string name="save">Save</string>
    <string name="enter_new_word">Enter New Word</string>
    <string name="word_saved">Word Successfully Saved</string>
    <string name="word_not_saved">Failed to save word</string>
    <string name="delete_word">Delete Word</string>
    <string name="logout">User must log in again</string>
    <string name="update">Update</string>
</resources>
