<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColourPrimary"
    tools:context=".View.TypedWordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="670dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/btnRecord"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colourPrimary"
            android:text="@string/record"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnPlayBack"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colourPrimary"
            android:text="@string/playBack"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etxtTypeWord"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/enter_new_word"
            android:inputType="textAutoComplete"
            android:padding="8dp"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colourPrimary"
            android:text="@string/save"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>