<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColourPrimary"
    tools:context=".AddWordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="670dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/btnRecord"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colourPrimary"
            android:text="@string/record"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnPlayBack"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colourPrimary"
            android:text="@string/playBack"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colourPrimary"
            android:text="@string/next"
            android:textSize="24sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>